src/objects/PF_Deployment__c.object
<CustomObject>
    <description>pForce - This will contain all the components for deployment per sprint.</description>
    <fields>
        <fullName>Dependent_Components__c</fullName>
        <label>Dependent Components</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Functionality</label>
        <referenceTo>Functionality__c</referenceTo>
        <relationshipLabel>Deployment Components</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_API_Name__c</fullName>
        <label>API Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>AccountCriteriaSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountOwnerSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountSharingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnalyticSnapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexClass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexTrigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApprovalProcesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BusinessProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CampaignCriteriaBaseSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CampaignOwnerSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CampaignSharingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseCriteriaBasedSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseOwnerSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseSharingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContactCriteriaBasedSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContactOwnerSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContactSharingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObjectCriteriaBasedSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObjectOwnerSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObjectSharingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObjectTranslation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomPageWebLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Defect_Status__c</fullName>
        <formula>TEXT(PF_Defect__r.PF_Status__c)</formula>
        <label>Defect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>PF_Defects__c</referenceTo>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Is_Prod_deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Prod deployed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Is_QA_deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is QA deployed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Parent_Component__c</fullName>
        <label>Parent Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Functionality__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DC - {0}</displayFormat>
        <label>DC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>